@@ -31,6 +31,7 @@
           include (Rhett Sutphin).
 * Fixed:  BUILDR-126  Tests options are shared between unrelated projects when
           using #options instead of #using (Lacton).
+* Fixed:  Should not display "(in `pwd`, development)" when using --quiet.
 * Docs:   BUILDR-111 Troubleshoot tip when Buildr's bin directory shows up in
           RUBYLIB (Geoffrey Ruscoe).
 
